assorted fixes, repair raytrace candidate method